# plutus-guessing-game-deployment

./: .gitignore  CHANGELOG.md  README.md  cabal.project  plutus-guessing-game-deployment.cabal  plutus-guessing-game.cabal
app/: Main.hs
