cabal-version:      3.0
name:               plutus-guessing-game-deployment
synopsis:           Genererate deployment information for the IOG Plutus Guessing Game 
version:            0.1.0.0
license:            NONE
author:             Dirk Dühr
maintainer:         dirk@duehr.de

extra-source-files:
    README.md
    CHANGELOG.md

executable plutus-guessing-game
    main-is:          Main.hs
    build-depends:
        base >=4.9 && <5,
        bytestring,
        cardano-api,
        cardano-binary,
        cardano-ledger-core,
        directory,
        plutus-ledger,
        plutus-ledger-api,
        plutus-tx,
        plutus-script-utils,
        plutus-use-cases,
        serialise,
        text,
        time,
        utf8-string

    hs-source-dirs:   app
    default-language: Haskell2010

ghc-options: 
    -Wall