cabal-version:      3.6
name:               plutus-guessing-game
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Dirk Dühr
maintainer:         dirk@duehr.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable plutus-guessing-game
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base         >=4.9 && <5
    hs-source-dirs:   app
    default-language: Haskell2010
